--- a/core/templates/address/client_address_delete_view.html
+++ b/core/templates/address/client_address_delete_view.html
@@ -1,11 +1,24 @@
 {% extends 'layouts/master.html' %}
 
-{% block content %}
-    <h1>¿Estas seguro de borrar {{object}}?</h1>
+{% block title %}
+Borrar Dirección de {{request.user.first_name}} {{request.user.last_name}}
+{% endblock title %}
 
-    <form method="post">
-        {% csrf_token %}
-        <button type="submit">Borrar</button>
-        <a href="{% url 'address:view' %}">Regresar</a>
-    </form>
+{% block content %}
+<div class="hero min-h-screen bg-error">
+    <div class="hero-overlay bg-opacity-40"></div>
+    <div class="hero-content text-center text-neutral-content">
+        <div class="max-w-md">
+            <form method="post">
+                {% csrf_token %}
+                <h1 class="mb-5 text-6xl font-bold font-serif">¿Estas Seguro?</h1>
+                <p class="text-2xl mb-5">Al borrar la dirección no se puede revertir</p>
+                <div class="flex justify-evenly">
+                    <a href="{% url 'address:view' %}" class="btn btn-primary">Cancelar</a>
+                    <button type="submit" class="btn btn-accent">Borrar</button>
+                </div>
+            </form>
+        </div>
+    </div>
+</div>
 {% endblock content %}
