--- a/core/templates/layouts/master.html
+++ b/core/templates/layouts/master.html
@@ -1,10 +1,12 @@
 {% load static wagtailcore_tags wagtailuserbar %}
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es" data-theme="luxury">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer">
+    <link rel="stylesheet" type="text/css" href="{% static 'core/css/main.css' %}">
     <title>
         {% block title %}
             {% if page.seo_title %}{{ page.seo_title }}{% else %}{{ page.title }}{% endif %}
@@ -22,17 +24,28 @@
 </head>
 <body class="{% block body_class %}{% endblock %}">
     {% wagtailuserbar %}
+    {% include 'layouts/components/navbar.html' %}
+    {% block content %}{% endblock %}
+    {% include 'layouts/components/cookies.html' %}
+    {% include 'layouts/components/footer.html' %}
+    {# Global javascript #}
+    <script defer src="{% static 'core/js/main.min.js' %}"></script>
     {% if messages %}
         {% for message in messages %}
-            <div class="{% if message.level == DEFAULT_MESSAGE_LEVELS.ERROR %}bg-danger text-white{% elif message.level == DEFAULT_MESSAGE_LEVELS.SUCCESS %}bg-success text-white{% elif message.level == DEFAULT_MESSAGE_LEVELS.WARNING %}bg-warning text-white{% endif %} mt-n4 mb-2 bounce animated p-3 d-flex align-items-center justify-content-center justify-content-md-start">
-                <h4 class="m-0"><i class="fa {% if message.level == DEFAULT_MESSAGE_LEVELS.ERROR %}fa-times-circle{% elif message.level == DEFAULT_MESSAGE_LEVELS.SUCCESS %}fa-check-circle{% elif message.level == DEFAULT_MESSAGE_LEVELS.WARNING %}fa-exclamation-triangle{% endif %}"></i>&nbsp;{{message}}</h4>
-            </div>
+            <script>
+                document.addEventListener('DOMContentLoaded', (e) => {
+                    const title = '{% if message.level == DEFAULT_MESSAGE_LEVELS.ERROR %}Error{% elif message.level == DEFAULT_MESSAGE_LEVELS.SUCCESS %}¡Listo!{% elif message.level == DEFAULT_MESSAGE_LEVELS.WARNING %}Información{% endif %}';
+                    const text = '{{message}}';
+                    const icon = '{% if message.level == DEFAULT_MESSAGE_LEVELS.ERROR %}error{% elif message.level == DEFAULT_MESSAGE_LEVELS.SUCCESS %}success{% elif message.level == DEFAULT_MESSAGE_LEVELS.WARNING %}warning{% endif %}';
+                    Swal.fire({
+                        title,
+                        text,
+                        icon
+                    });
+                })
+            </script>
         {% endfor %}
     {% endif %}
-    {% block content %}{% endblock %}
-
-    {# Global javascript #}
-
     {% block extra_js %}
         {# Override this in templates to add extra javascript #}
     {% endblock %}
