--- a/core/templates/registration/user_profile.html
+++ b/core/templates/registration/user_profile.html
@@ -1,14 +1,38 @@
 {% extends 'layouts/master.html' %}
 
-{% block content %}
-    <h1>Mi perfil</h1>
-    {% if user.wagtail_userprofile.avatar %}
-        <img src="{{user.wagtail_userprofile.avatar.url}}"}}">
-    {% endif %}
-    <a href="{% url 'profile:edit' %}">Editar perfil</a>
-    <a href="{% url 'logout' %}">Logout</a>
-    <h3>Nombre: {{user.first_name}} {{user.last_name}}</h3>
-    <h3>Correo: {{user.email}}</h3> 
+{% load static i18n %}
 
-    <h1><a href="{% url 'address:view' %}">Mis Direcciones</a></h1>
+{% block title %}
+    {% trans "My Profile" %} | {{request.user.first_name}} {{request.user.last_name}}
+{% endblock title %}
+
+{% block content %}
+<div class="hero h-96" style="background-image: url({% static 'core/assets/img/profile_wallpaper.jpg' %});">
+    <div class="hero-overlay bg-opacity-60"></div>
+    <div class="hero-content text-center text-neutral-content">
+        <div class="max-w-md">
+            <h1 class="mb-5 text-5xl font-serif font-bold">{% trans "My Profile" %}</h1>
+        </div>
+    </div>
+</div>
+<div class="w-full px-4 py-24 flex flex-wrap justify-center items-center bg-secondary-focus md:px-8">
+    <h2 class="text-2xl font-bold font-serif text-center card-title">{% trans "Welcome" %}</h2>
+    <div class="w-full flex flex-col justify-center items-center md:mt-4 md:flex-row">
+        <img class="w-32 h-32 rounded-full object-cover my-4 md:my-0" src="{% if user.wagtail_userprofile.avatar %}{{user.wagtail_userprofile.avatar.url}}{% else %}{% static 'core/assets/img/avatar.png' %}{% endif %}">
+        <div class="flex flex-wrap flex-col ml-0 mt-4 md:ml-10 md:mt-0"> 
+            <div class="flex items-center mb-4">
+                <div class="badge badge-outline mr-5">{% trans "Full Name" %}</div>
+                <h4>{{request.user.first_name}} {{request.user.last_name}}</h4>
+            </div>
+            <div class="flex items-center">
+                <div class="badge badge-outline mr-5">{% trans "Email" %}</div>
+                <h4>{{request.user.email}}</h4>
+            </div>
+        </div>
+        <div class="flex flex-wrap flex-col ml-0 mt-8 md:mt-0 md:ml-10">
+          <a class="btn my-2" href="{% url 'profile:edit' %}">{% trans "Edit Profile" %}</a>
+          <a class="btn btn-primary my-2" href="{% url 'address:view' %}">{% trans "See My Addresses" %}</a>
+        </div>
+    </div>
+</div>
 {% endblock content %}
