all work before checkout

--- a/core/templates/layouts/master.html
+++ b/core/templates/layouts/master.html
@@ -1,4 +1,4 @@
-{% load i18n static wagtailcore_tags wagtailuserbar %}
+{% load i18n static wagtailcore_tags wagtailuserbar unicorn %}
 <!DOCTYPE html>
 <html lang="es" data-theme="luxury">
 <head>
@@ -7,6 +7,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer">
     <link rel="stylesheet" type="text/css" href="{% static 'core/css/main.css' %}">
+    {% unicorn_scripts %}
+    {# Global css #}
+    {% block extra_css %}
+    {% endblock %}
     <title>
         {% block title %}
             {% if page.seo_title %}{{ page.seo_title }}{% else %}{{ page.title }}{% endif %}
@@ -16,13 +20,8 @@
             {% if current_site and current_site.site_name %}- {{ current_site.site_name }}{% endif %}
         {% endblock %}
     </title>
-
-    {# Global css #}
-    {% block extra_css %}
-            {# Override this in templates to add extra stylesheets #}
-    {% endblock %}
 </head>
-<body class="{% block body_class %}{% endblock %}">
+<body class="{% block body_class %}{% endblock %}"> 
     {% wagtailuserbar %}
     {% include 'layouts/components/navbar.html' %}
     {% block content %}{% endblock %}
@@ -34,9 +33,9 @@
         {% for message in messages %}
             <script>
                 document.addEventListener('DOMContentLoaded', (e) => {
-                    const title = '{% if message.level == DEFAULT_MESSAGE_LEVELS.ERROR %}{% trans "Error" %}{% elif message.level == DEFAULT_MESSAGE_LEVELS.SUCCESS %}{% trans "Ready!" %}{% elif message.level == DEFAULT_MESSAGE_LEVELS.WARNING %}{% trans "Information" %}{% endif %}';
-                    const text = '{{message}}';
-                    const icon = '{% if message.level == DEFAULT_MESSAGE_LEVELS.ERROR %}error{% elif message.level == DEFAULT_MESSAGE_LEVELS.SUCCESS %}success{% elif message.level == DEFAULT_MESSAGE_LEVELS.WARNING %}warning{% endif %}';
+                    const title = "{% if message.level == DEFAULT_MESSAGE_LEVELS.ERROR %}{% trans "Error" %}{% elif message.level == DEFAULT_MESSAGE_LEVELS.SUCCESS %}{% trans "Ready!" %}{% elif message.level == DEFAULT_MESSAGE_LEVELS.WARNING %}{% trans "Information" %}{% endif %}";
+                    const text = "{{message|safe}}";
+                    const icon = "{% if message.level == DEFAULT_MESSAGE_LEVELS.ERROR %}error{% elif message.level == DEFAULT_MESSAGE_LEVELS.SUCCESS %}success{% elif message.level == DEFAULT_MESSAGE_LEVELS.WARNING %}warning{% endif %}";
                     Swal.fire({
                         title,
                         text,
