--- a/core/templates/product/product_index.html
+++ b/core/templates/product/product_index.html
@@ -3,7 +3,7 @@
 {% load static i18n wagtailimages_tags %}
 
 {% block title %}
-  Palamo. {% if request.user.is_authenticated %} | {{request.user.first_name}}{% endif %}
+  Palamo. | {% trans "Your Gift Shop" %}
 {% endblock title %}
 
 {% block content %}
@@ -23,11 +23,16 @@
     <div class="w-full my-6 flex justify-center">
       <h1 class="text-3xl font-serif font-bold">{% trans "Recent Products" %}</h1>
     </div>
-    {% for product in index_products %}
+    <div class="w-full flex flex-wrap items-center justify-center mt-8 gap-y-6 md:mt-10 md:gap-y-16 md:gap-x-8">
+      {% for product in index_products %}
         {% include 'product/components/product_card.html' with selected_product=product %}
-    {% empty %}
+      {% empty %}
         <h1 class="text-neutral-content">{% trans "No Products" %}</h1>
-    {% endfor %}
-    <div class="w-full my-6 flex justify-center md:justify-end"><a class="btn btn-active btn-lg" href="">{% trans "See More" %}</a></div>
+      {% endfor %}
+    </div>
+    
+    <div class="w-full my-6 flex justify-center md:justify-end">
+      <a class="btn btn-active btn-lg" href="{% url 'products:store' %}">{% trans "See More" %}</a>
+    </div>
 </div>
 {% endblock content %}
