--- a/core/templates/registration/user_signup.html
+++ b/core/templates/registration/user_signup.html
@@ -28,7 +28,7 @@ Palamo. | {% trans "Sign In" %}
               </div>
             </div>
             <div class="flex flex-col justify-start text-left my-2">
-              <a class="link" href="#register">{% trans "Are you registered?" %}</a>
+              <a class="link" href="#register">{% trans "Not registered?" %}</a>
               <a class="link" href="">{% trans "Forgot password?" %}</a>
             </div>
             <div class="card-actions justify-end">
