--- a/core/templates/product/product_detail_view.html
+++ b/core/templates/product/product_detail_view.html
@@ -36,7 +36,16 @@
       <h3 class="text-xl font-bold mt-4">Stock: {{product.stock}}</h1>
       <h3 class="text-3xl mt-4">${{product.price}}</h3>
       <p class="my-3 text-xl mt-6 text-primary-focus">{{product.description | richtext}}</p>
-      {% unicorn 'product.buy' product_id=product.id button_title='Buy Now' %}
+      <div class="mt-3">
+        {% if request.user.is_autheticated %}
+          {% unicorn 'product.buy' product_id=product.id button_title='Buy Now' %}
+        {% else %}
+          <a href="{% url 'login' %}" class="btn btn-secondary flex flex-wrap items-center justify-center gap-3"> 
+            <i class="fa-solid fa-bag-shopping"></i>
+            <span>Login to Buy</span>
+          </a>
+        {% endif %}
+      </div>
     </div>
 </div>
 {% endblock content %}
