--- a/core/templates/product/product_detail_view.html
+++ b/core/templates/product/product_detail_view.html
@@ -37,7 +37,7 @@
       <h3 class="text-3xl mt-4">${{product.price}}</h3>
       <p class="my-3 text-xl mt-6 text-primary-focus">{{product.description | richtext}}</p>
       <div class="mt-3">
-        {% if request.user.is_autheticated %}
+        {% if request.user.is_authenticated %}
           {% unicorn 'product.buy' product_id=product.id button_title='Buy Now' %}
         {% else %}
           <a href="{% url 'login' %}" class="btn btn-secondary flex flex-wrap items-center justify-center gap-3"> 
