--- a/core/templates/product/product_detail_view.html
+++ b/core/templates/product/product_detail_view.html
@@ -33,17 +33,25 @@
     </div>
     <div class="flex flex-wrap flex-col md:w-5/12 lg:w-4/12">
       <h1 class="text-3xl font-bold md:mt-10 lg:mt-20">{{product.name}}</h1>
-      <h3 class="text-xl font-bold mt-4">Stock: {{product.stock}}</h1>
+      {% if product.stock > 0 and product.available %}
+        <h3 class="text-xl font-bold mt-4">Stock: {{product.stock}}</h1>
+      {% endif %}
       <h3 class="text-3xl mt-4">${{product.price}}</h3>
       <p class="my-3 text-xl mt-6 text-primary-focus">{{product.description | richtext}}</p>
       <div class="mt-3">
-        {% if request.user.is_authenticated %}
-          {% unicorn 'product.buy' product_id=product.id button_title='Buy Now' %}
+        {% if product.stock > 0 and product.available %}
+          {% if request.user.is_authenticated %}
+            {% unicorn 'product.buy' product_id=product.id button_title='Buy Now' %}
+          {% else %}
+            <a href="{% url 'login' %}" class="btn btn-secondary flex flex-wrap items-center justify-center gap-3"> 
+              <i class="fa-solid fa-bag-shopping"></i>
+              <span>{% trans "Login to Buy" %}</span>
+            </a>
+          {% endif %}
         {% else %}
-          <a href="{% url 'login' %}" class="btn btn-secondary flex flex-wrap items-center justify-center gap-3"> 
-            <i class="fa-solid fa-bag-shopping"></i>
-            <span>Login to Buy</span>
-          </a>
+            <button class="btn btn-secondary flex flex-wrap items-center justify-center gap-3"> 
+              <span>{% trans "Out of stock" %}</span>
+            </button>
         {% endif %}
       </div>
     </div>
