--- a/core/templates/registration/user_profile_edit.html
+++ b/core/templates/registration/user_profile_edit.html
@@ -46,7 +46,7 @@
         </label>
       </div>
     </div>
-    <div class="w-full flex justify-center items-center mt-6"><a class="mx-4 btn" href="">{% trans "Change Password" %}</a>
+    <div class="w-full flex justify-center items-center mt-6"><a class="mx-4 btn" href="{% url 'password_change' %}">{% trans "Change Password" %}</a>
       <button type="submit" class="mx-4 btn btn-primary">{% trans "Update" %}</button>
     </div>
 </form>
