--- a/core/templates/404.html
+++ b/core/templates/404.html
@@ -1,11 +1,20 @@
-{% extends "layouts/master.html" %}
+{% extends 'layouts/master.html' %}
 
-{% block title %}Page not found{% endblock %}
+{% load static i18n wagtailimages_tags wagtailcore_tags unicorn %}
 
-{% block body_class %}template-404{% endblock %}
+{% block title %}
+  Palamo. | 404 - {% trans "Not Found" %}
+{% endblock title %}
 
 {% block content %}
-    <h1>Page not found</h1>
-
-    <h2>Sorry, this page could not be found.</h2>
-{% endblock %}
+<div class="hero h-screen bg-cover" style="background-image: url({% static 'core/assets/img/404_desert.jpg' %})">
+    <div class="hero-overlay bg-opacity-60"></div>
+    <div class="hero-content text-center text-neutral-content">
+      <div class="max-w-md">
+        <h1 class="text-9xl font-bold font-serif mb-5">404</h1>
+        <p class="text-xl font-serif mb-5 md:text-2xl">{% trans "In the desert you could find more things..." %}</p>
+        <a class="btn btn-lg btn-primary" href="{% url 'products:store' %}">{% trans "Lets go buy!" %}</a>
+      </div>
+    </div>
+</div>
+{% endblock content %}
